[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastlmi"
version = "0.0.1"
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
]
description = "A FastAPI-based framework for quickly building and iterating on language model interfaces."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi~=0.95.1",
]

[project.urls]
"Homepage" = "https://github.com/zhudotexe/fastlmi"
"Bug Tracker" = "https://github.com/zhudotexe/fastlmi/issues"

[tool.black]
line-length = 120
preview = true
